<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="username_label">Username:</string>
    <string name="hint_username">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="hint_password">Please enter a password</string>
    <string name="confirm_label">Confirm:</string>
    <string name="hint_confirm">Please confirm your password</string>
    <string name="new_string">Here's a new string</string>

</resources>
